Bug 517841: [9] Support Java 9 APT models
Change-Id: I6b61e6ab32b905357b5256cd875eb8337822f3c6
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>